--- a/loading.css
+++ b/loading.css
@@ -1,3 +1,5 @@
+@font-face{font-family:"Conduit ITC";src:url(Conduit-ITC.woff);}
+
 html, body {
     width: 100%;
     height: 100%;
@@ -7,36 +9,86 @@ html, body {
 body {
     background: black;
     color: white;
-    font: 24pt "Tahoma", sans-serif;
+    font: 24pt "Conduit ITC", sans-serif;
+}
+
+progress {
+    -webkit-appearance: none;
+    position: absolute;
+    height: 10px;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+}
+
+progress::-webkit-progress-bar {
+    background: black;
+}
+
+progress::-webkit-progress-value {
+    background: white;
 }
 
 .header{
     position: absolute;
+    left: 0;
     top: 0;
+    width: 100%;
+
+    height: 15vh;
+}
+
+.footer{
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+
+    height: 15vh;
 }
 
 .header img{
+    position: relative;
+    top: -1vh;
     height: 16vh;
+    padding: 0;
 }
 
 .container {
     position: absolute;
-    top: 0;
+    top: 15vh;
+    left: 0;
     width: 100%;
-    height: 100%;
+    height: 70vh;
+    max-height: 70vh;
     display: flex;
     align-items: center;
     justify-content: center;
     text-align: center;
-    z-index: 1;
-    background-image: url("maps/chill.png");
+    z-index: -1;
     background-repeat: no-repeat;
-    background-size: 100%;
+    background-size: auto 100%;
     background-position: center;
+    border-top: 1px solid #7fa4c5;
+    border-bottom: 1px solid #7fa4c5;
 }
 
-h1 {
-    margin: 0;
-    padding: 0;
+#title {
+    position: relative;
     float: left;
+    font-size: 8vh;
+    top: 2.5vh;
+    left: 2vw;
+}
+
+#desc {
+    position: relative;
+    top: 3vh;
+    right: 2vw;
+    float: right;
+    font-size: 2.5vh;
+    text-align: right;
+    color: #7fa4c5;
 }
