--- a/loading.css
+++ b/loading.css
@@ -63,16 +63,23 @@ progress::-webkit-progress-value {
     width: 100%;
     height: 70vh;
     max-height: 70vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
     z-index: -1;
     background-repeat: no-repeat;
     background-size: auto 100%;
     background-position: 0px 0px;
     border-top: 1px solid #7fa4c5;
     border-bottom: 1px solid #7fa4c5;
+}
+
+.serverMessage {
+    position: relative;
+    float: right;
+    top: 0;
+    height: 85%;
+    max-width: 40%;
+    right: 1vw;
+    margin: 5.1vh;
+    font-size: 4vh;
 }
 
 #title {
@@ -85,10 +92,11 @@ progress::-webkit-progress-value {
 
 #desc {
     position: relative;
-    top: 3vh;
+    top: 3.5vh;
     right: 2vw;
     float: right;
     font-size: 2.5vh;
     text-align: right;
     color: #7fa4c5;
+    max-width: 50%;
 }
