--- a/loading.css
+++ b/loading.css
@@ -7,7 +7,10 @@ html, body {
 }
 
 body {
-    background: black;
+    background-image: url('background.png');
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
     color: white;
     font: 24pt "Conduit ITC", sans-serif;
 }
@@ -37,8 +40,10 @@ progress::-webkit-progress-value {
     left: 0;
     top: 0;
     width: 100%;
-
     height: 15vh;
+    background-color: black;
+    opacity: 0.9;
+    border-bottom: 1px solid #7fa4c5;
 }
 
 .footer{
@@ -46,8 +51,10 @@ progress::-webkit-progress-value {
     left: 0;
     bottom: 0;
     width: 100%;
-
     height: 15vh;
+    background-color: black;
+    opacity: 0.9;
+    border-top: 1px solid #7fa4c5;
 }
 
 .header img{
@@ -57,19 +64,20 @@ progress::-webkit-progress-value {
     padding: 0;
 }
 
+#gameType {
+    float: right;
+    top: 1.5vh;
+    right: 1vw;
+    height: 12vh;
+}
+
 .container {
     position: absolute;
     top: 15vh;
     left: 0;
     width: 100%;
     height: 70vh;
-    max-height: 70vh;
     z-index: -1;
-    background-repeat: no-repeat;
-    background-size: 100%;
-    background-position: 0px 0px;
-    border-top: 1px solid #7fa4c5;
-    border-bottom: 1px solid #7fa4c5;
 }
 
 .serverMessage {
