--- a/loading.css
+++ b/loading.css
@@ -1,13 +1,77 @@
 @font-face{font-family:"Conduit ITC";src:url(Conduit-ITC.woff);}
 
-html, body {
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
+html, body, div {
+	position: absolute;
+	margin: 0;
+	width: 100%;
+	height: 100%;
+	animation-iteration-count: infinite;
+}
+
+div.clouds {
+	background-image:
+	  url(images/cloud_front.png),
+	  url(images/cloud_back.png);
+	background-size: calc(100% + 200px) 55%, calc(100% + 200px) 70%;
+	background-position: 100% calc(100% - 50px), 0% calc(100% - 50px);
+	background-repeat: no-repeat;
+	animation-duration: 10s;
+	animation-delay: 0s;
+	animation-name: clouds;
+	animation-direction: alternate;
+	animation-timing-function: ease-in-out;
+}
+
+div.ring {
+	background-image: url(images/ring.png);
+	background-size: cover;
+	background-position: 50% 0%;
+	background-repeat: no-repeat;
+}
+
+div.stars {
+	background-image: url(images/stars.jpg);
+	background-size: cover;
+	background-position: 50% 0%;
+	background-repeat: repeat;
+	animation-duration: 40s;
+	animation-delay: 0s;
+	animation-name: stars;
+	animation-direction: normal;
+	animation-timing-function: linear;
+}
+
+div.eldorito {
+	background-image: url(images/logo.png);
+	background-size: auto 15%;
+	background-position: 50%;
+	background-repeat: no-repeat;
+}
+
+@keyframes stars {
+	0% {
+	  background-position: 0% 0%;
+	}
+	100% {
+	  background-position: 100% calc(100% - 100vh);
+	}
+}
+
+@keyframes clouds {
+	0% {
+	  background-position: 
+		100% calc(100% + 50px), 
+		0% calc(100% + 50px);
+	}
+	100% {
+	  background-position: 
+		0% calc(100% + 50px), 
+		100% calc(100% + 50px);
+	}
 }
 
 body {
-    background-image: url('background.png');
+    background-image: none;
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -110,7 +174,7 @@ progress::-webkit-progress-value {
     left: 0;
     width: 100%;
     height: 70vh;
-    z-index: -1;
+    z-index: 1;
 }
 
 .serverName {
