--- a/loading.css
+++ b/loading.css
@@ -7,12 +7,13 @@ html, body {
 }
 
 body {
-    background-image: url('background.png');
+    background-image: url('images/background.png');
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
     color: white;
     font: 24pt "Conduit ITC", sans-serif;
+    margin: 0;
 }
 
 progress {
@@ -44,7 +45,7 @@ progress::-webkit-progress-value {
     background-color: black;
     opacity: 0.9;
     border-bottom: 1px solid #7fa4c5;
-	display: none;
+    display: none;
 }
 
 .footer{
@@ -56,7 +57,7 @@ progress::-webkit-progress-value {
     background-color: black;
     opacity: 0.9;
     border-top: 1px solid #7fa4c5;
-	display: none;
+    display: none;
 }
 
 .header img{
@@ -140,7 +141,7 @@ progress::-webkit-progress-value {
     font-size: 3.5vh;
     padding: 1.5vw;
     background-color: rgba(0, 0, 0, 0.6);
-	display: none;
+    display: none;
 }
 
 #title {
@@ -160,4 +161,93 @@ progress::-webkit-progress-value {
     text-align: right;
     color: #7fa4c5;
     max-width: 40%;
+}
+
+
+/* Generic Loading Screen */
+
+.generic .clouds {
+    position: absolute;
+    margin: 0;
+    width: 100%;
+    height: 100%;
+    background-image:
+        url(images/cloud_front.png),
+        url(images/cloud_back.png);
+    background-size: calc(100% + 200px) 55%, calc(100% + 200px) 70%;
+    background-position: 100% calc(100% - 50px), 0% calc(100% - 50px);
+    background-repeat: no-repeat;
+    animation-duration: 10s;
+    animation-delay: 0s;
+    animation-name: clouds;
+    animation-direction: alternate;
+    animation-iteration-count: infinite;
+    animation-timing-function: ease-in-out;
+}
+
+.generic .ring {
+    position: absolute;
+    margin: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url(images/ring.png);
+    background-size: cover;
+    background-position: 50% 0%;
+    background-repeat: no-repeat;
+}
+
+.generic .stars {
+    position: absolute;
+    margin: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url(images/stars.jpg);
+    background-size: cover;
+    background-position: 50% 0%;
+    background-repeat: repeat;
+    animation-duration: 100s;
+    animation-delay: 0s;
+    animation-name: stars;
+    animation-direction: normal;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+}
+
+.generic .eldorito {
+    position: absolute;
+    margin: 0;
+    bottom: 42%;
+    width: 100%;
+    height: 15%;
+    background-image: url(images/EldoritoLogoFinalSmall.png);
+    background-size: auto 100%;
+    background-position: 50%;
+    background-repeat: no-repeat;
+}
+
+.generic .eldorito.loading {
+    background-image: url(images/EldoritoLogoFinalBlueSmall.png);
+    -webkit-clip-path: inset(100% 0 0 0);
+}
+
+@keyframes stars {
+    0% {
+        background-position: 0% 0%;
+    }
+    100% {
+        background-position: 100% calc(100% - 100vh);
+    }
+}
+
+@keyframes clouds {
+    0% {
+        background-position: 
+            100% calc(100% + 50px), 
+            0% calc(100% + 50px);
+    }
+    100% {
+        background-position: 
+            0% calc(100% + 50px), 
+            100% calc(100% + 50px);
+    }
 }
